style.css
* {
    margin: 0;
    padding: 0;
    font-family: sans-serif;
}

.container {
    width: 1000px;
    margin: 0 auto;
}

header {
    width: 100%;
    background-color: #ffe04d;
    display: flex;
    align-items: center;
}

header img {
    height: 14rem;
}

.profile-title {
    margin-left: 2rem;
}

.profile-title h1 {
    font-size: 60px;
}

.profile-title h6 {
    font-size: 14px;
}

.contacts {
    margin-top: 2rem;
}

.profile {
    margin-top: 2rem;
}

.title {
    display: inline-block;
    background-color: black;
    padding: 0.5rem 1rem;
    font-size: 1rem;
    text-transform: uppercase;
    color: white;
    font-weight: 400;
    margin-bottom: 1rem;
}

.profile p {
    line-height: 1.5rem;
}

.employment-block:nth-child(n+3) {
    margin-top: 2rem;
}

.employment-block ul {
    margin-left: 1rem;
}

.employment-block li {
    margin-top: 0.5rem;
}

.employment-history {
    margin-top: 2rem;
}

.subtitle {
    font-size: 1rem;
}

.date {
    margin: 0.5rem 0 1rem;
    color: #aeaeae;
    font-weight: 400;
    font-size: 0.8125rem;
    text-transform: uppercase;
}

.description {
    line-height: 1.5rem;
}

.education {
    margin-top: 2rem;
}

.skills {
    margin-top: 2rem;
}

.skills ul {
    display: flex;
    flex-wrap: wrap;
}

.skills li {
    list-style: none;
    line-height: 1.5rem;
}

.languages {
    margin-top: 2rem;
}

.languages table {
    width: 100%
}

.languages td {
    width: 50%;
}

.hobbies {
    margin-top: 2rem;
}

.hobbies p {
    line-height: 1.5rem;
}

.project-table {
    margin: 1rem auto;
    width: 90%;
    align-self: flex-end;
    line-height: 1.5rem;
    border-spacing: 0 2em;
}

.heading {
    min-width: 11rem;
    vertical-align: top;
    text-align: right;
    padding-right: 1rem;
    font-weight: 900;
}

.tool {
    font-weight: 900;
}

